# LogicalDistillationOfGNNs

./: .gitignore  README.md  evaluate.py  evaluate.sh  evaluateBAMultiShape.py  evaluateEMCL.py  evaluateEMLC.py  evaluateTU.py  example.ipynb  experiments.ipynb  pyproject.toml  requirements.txt  requirements_dev.txt  run.py  train.py  train_trial.sh
gnnexplain/: data.py  idt.py
gnnexplain/BAMultiShapes/: generate_dataset.py
gnnexplain/logic/: c2.py
gnnexplain/model/: gtree.py  nb.py
gnnexplain/nn/: acgnn.py  gcn.py  gnn.py  model.py
gnnexplain/syntheticEMCL/: datasets.py
idt/: data.py  gnn.py  idt.py
