[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gnnexplain"
dynamic = [
    "version",
    "dependencies",
    "optional-dependencies"
]
requires-python = ">=3.11"

[tool.setuptools]
py-modules = []

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements-dev.txt"] }}